<resources>
    <string name="app_name">e-Trite</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_chatroom">Chatroom</string>
    <string name="title_profile">Profile</string>
    <string name="dashboard_greetings">Hello There</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_exercise">Exercise</string>
    <string name="avatar_placeholder">Avatar</string>

    <!--User-->
    <string name="profile_username"></string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="content_description">image</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="err_msg_enter_username">Please enter username.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>

    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="et_hint_username">Username</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>

    <string name="register_success">You are registered successfully.</string>
    <string name="lbl_forgot_password">Forgot Password?</string>

    <string name="title_forgot_password">Password Reset</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="splash_title">e-Trite</string>
    <string name="splash_slogan">fitness made simple.</string>
    <string name="register_lbl">Register</string>
    <string name="register_new_account">Register New Account</string>
    <string name="submit">Submit</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="phone">Phone</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profilepicture">Avatar</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="title_activity_add_food_item">AddFoodItemActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>