<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <com.example.etrite.utils.MSPTextViewBold
        android:id="@+id/userprofileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/complete_profile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.example.etrite.utils.MSPEditText
        android:id="@+id/phoneTextField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="132dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/rg_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextField"
        app:layout_constraintVertical_bias="0.0" />

    <com.example.etrite.utils.MSPEditText
        android:id="@+id/emailTextField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_hint_email_id"
        app:layout_constraintBottom_toTopOf="@+id/rg_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextField"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/fl_user_image"
        android:layout_width="@dimen/profile_user_image_size"
        android:layout_height="@dimen/profile_user_image_size"
        android:layout_marginTop="@dimen/profile_user_image_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/profile_user_photo_margin"
            android:background="@color/colorLightGrey"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_user_placeholder" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/user_image_background" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_radio_button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.example.etrite.utils.MSPRadioButton
            android:id="@+id/rb_male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
            android:layout_weight="1"
            android:background="@drawable/drawable_gender_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/rb_lbl_male"
            android:textColor="@drawable/drawable_gender_tab_text_color_selector"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <com.example.etrite.utils.MSPRadioButton
            android:id="@+id/rb_female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_gender_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/rb_lbl_female"
            android:textColor="@drawable/drawable_gender_tab_text_color_selector"
            android:textStyle="bold" />
    </RadioGroup>

    <com.example.etrite.utils.MSPButton
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/button_background"
        android:text="save changes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.etrite.utils.MSPEditText
        android:id="@+id/usernameTextField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_hint_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_user_image" />

</androidx.constraintlayout.widget.ConstraintLayout>